--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -201,6 +201,7 @@ body {
 }
 #ticketForm label,
 #clientLogin label {
+  white-space: nowrap;
   text-align: left;
 }
 #ticketForm label .required,
@@ -221,7 +222,7 @@ body {
   top: 6px;
 }
 div textarea {
-  width: 600px;
+  width: 100%;
 }
 div em {
   color: #777;
@@ -244,35 +245,8 @@ div.error input {
 div.error label {
   color: #a00;
 }
-#ticketTable th {
-  font-weight: normal;
-  text-align: left;
-}
-#ticketTable th.required,
-#ticketTable td.required {
-  font-weight: bold;
-  text-align: left;
-}
 #clientLogin {
-  background: url('../images/lock.png?1319655200') 95% 50% no-repeat #f6f6f6;
-}
-#clientLogin p {
-  clear: both;
-  text-align: center;
-}
-#clientLogin strong {
-  font-size: 11px;
-  color: #d00;
-  display: block;
-  padding-left: 140px;
-}
-#clientLogin #email {
-  width: 250px;
-  margin-right: 0;
-}
-#clientLogin #ticketno {
-  width: 120px;
-  margin-right: 0;
+  background: url('../images/lock.png?1319655200') 95% 30% no-repeat #f6f6f6;
 }
 #reply {
   margin-top: 20px;
@@ -282,20 +256,6 @@ div.error label {
 }
 #reply h2 {
   margin-bottom: 10px;
-}
-#reply table {
-  width: 100%;
-}
-#reply table td {
-  vertical-align: top;
-}
-#reply textarea {
-  width: 628px !important;
-}
-#reply input[type=text],
-#reply #response_options textarea {
-  border: 1px solid #aaa;
-  background: #fff;
 }
 #reply .attachments .uploads div {
   display: inline-block;
@@ -382,46 +342,4 @@ a.refresh {
 .infoTable th {
   text-align: left;
   white-space: nowrap;
-}
-#ticketThread table {
-  width: 100%;
-  margin-top: 10px;
-  border: 1px solid #aaa;
-  border-bottom: 2px solid #aaa;
-}
-#ticketThread table th {
-  text-align: left;
-  border-bottom: 1px solid #aaa;
-  font-size: 12px;
-  padding: 5px;
-}
-#ticketThread table th span {
-  font-weight: normal;
-  color: #888;
-  padding-left: 20px;
-}
-#ticketThread table td {
-  padding: 5px;
-}
-#ticketThread .message th {
-  background: #d8efff;
-}
-#ticketThread .response th {
-  background: #ddd;
-}
-#ticketThread .info {
-  padding: 2px;
-  background: #f9f9f9;
-  border-top: 1px solid #ddd;
-  height: 16px;
-  line-height: 16px;
-}
-#ticketThread .info a {
-  display: inline-block;
-  margin: 5px 10px 5px 0;
-  padding-left: 24px;
-  height: 16px;
-  line-height: 16px;
-  background-position: 0 50%;
-  background-repeat: no-repeat;
 }
