--- a/assets/default/less/ticket-forms.less
+++ b/assets/default/less/ticket-forms.less
@@ -1,5 +1,6 @@
 #ticketForm, #clientLogin {
     label {
+    white-space: nowrap;
     text-align: left;
       .required {
         font-weight: bold;
@@ -23,7 +24,7 @@
 
   div {
     textarea {
-      width: 600px;
+      width: 100%;
     }
 
     em {
@@ -54,41 +55,8 @@
     }
   }
 
-#ticketTable {
-  th {
-    font-weight: normal;
-    text-align: left;
-  }
-  th.required, td.required {
-    font-weight: bold;
-    text-align: left;
-  }
-}
-
 #clientLogin {
-  background: url('../images/lock.png?1319655200') 95% 50% no-repeat #f6f6f6;
-
-  p {
-    clear: both;
-    text-align: center;
-  }
-
-  strong {
-    font-size: 11px;
-    color: #d00;
-    display: block;
-    padding-left: 140px;
-  }
-
-  #email {
-    width: 250px;
-    margin-right: 0;
-  }
-
-  #ticketno {
-    width: 120px;
-    margin-right: 0;
-  }
+  background: url('../images/lock.png?1319655200') 95% 30% no-repeat #f6f6f6;
 }
 
 #reply {
@@ -99,23 +67,6 @@
 
   h2 {
     margin-bottom: 10px;
-  }
-
-  table {
-    width: 100%;
-
-    td {
-      vertical-align: top;
-    }
-  }
-
-  textarea {
-    width: 628px !important;
-  }
-
-  input[type=text], #response_options textarea {
-    border: 1px solid #aaa;
-    background: #fff;
   }
 
   .attachments .uploads div {
